k8s/web-demo/blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: blue
  name: blue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: blue
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: blue
    spec:
      containers:
      - image: gambitmis/web-demo:t2v1
        name: web-demo
        ports:
        - containerPort: 80
        resources: {}
status: {}
