k8s/web-demo/green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: green
  name: green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: green
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: green
    spec:
      containers:
      - image: gambitmis/web-demo:t4v1
        name: web-demo
        ports:
        - containerPort: 80
        resources: {}
status: {}
