k8s/web-demo/prod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: prod
  name: webdemo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: prod
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: prod
    spec:
      containers:
      - image: gambitmis/web-demo:t1v1
        name: web-demo
        ports:
        - containerPort: 80
        resources: {}
status: {}
