k8s/web-demo/green-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: green
  name: svc-green
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: green
status:
  loadBalancer: {}
