k8s/web-demo/prod-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: prod
  name: svc-webdemo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: prod
status:
  loadBalancer: {}
