k8s/web-demo/stable-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: stable
  name: svc-stable
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: stable
status:
  loadBalancer: {}
