k8s/web-demo/bg-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-bg
  #annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: gdcc-blue.dg-paas.cloud
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: svc-blue
            port:
              number: 80
  - host: gdcc-green.dg-paas.cloud
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: svc-green
            port:
              number: 80
  - host: gdcc-bg.dg-paas.cloud
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: svc-green
            port:
              number: 80
