k8s/web-demo/prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-webdemo
spec:
  ingressClassName: nginx
  rules:
  - host: gdcc-webdemo.dg-paas.cloud
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: svc-webdemo
            port:
              number: 80
