k8s/web-demo/stable-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-stable
  #annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: gdcc-canary.dg-paas.cloud
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: svc-stable
            port:
              number: 80
